# dataclass-witch

./: .gitignore  CONTRIBUTING.rst  Makefile  README.rst  pyproject.toml  requirements-dev.txt  setup.cfg  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: dev.yml  release.yml
benchmarks/: complex.py  nested.py  simple.py
dataclass_mage/: __init__.py  __version__.py
dataclass_witch/: __init__.py  __version__.py  abstractions.py  bases_meta.py  dumpers.py  loaders.py  log.py  models.py  property_wizard.py  type_def.py
dataclass_witch/utils/: typing_compat.py
dataclass_witch/wizard_cli/: cli.py  schema.py
dataclass_wizard/: __version__.py  abstractions.py  bases.py  bases_meta.py  type_def.py  wizard_mixins.py
dataclass_wizard/wizard_cli/: cli.py  schema.py
docs/: conf.py  dataclass_mage.rst  dataclass_mage.utils.rst  dataclass_mage.wizard_cli.rst  dataclass_witch.rst  dataclass_witch.utils.rst  dataclass_witch.wizard_cli.rst  dataclass_wizard.utils.rst  examples.rst  index.rst  installation.rst  modules.rst  overview.rst  quickstart.rst  using_field_properties.rst  wiz_cli.rst
docs/_templates/: sidebarintro.html
docs/advanced_usage/: serializer_hooks.rst  type_hooks.rst
docs/common_use_cases/: custom_key_mappings.rst  dataclasses_in_union_types.rst  meta.rst  patterned_date_time.rst  serialization_options.rst  skip_inheritance.rst  skip_the_str.rst  wizard_mixins.rst
tests/: conftest.py
tests/unit/: __init__.py  conftest.py  test_bases_meta.py  test_dump.py  test_load.py  test_load_with_future_import.py  test_models.py  test_property_wizard.py  test_property_wizard_with_future_import.py  test_wizard_cli.py  test_wizard_mixins.py
tests/unit/utils/: test_lazy_loader.py  test_string_conv.py  test_typing_compat.py
